# bfs-pr-scaling-sc-2024

./: .gitmodules  README.md
udgem5sim/ext/updown/apps/: CMakeLists.txt
udgem5sim/ext/updown/apps/bfs/: BfsPullPhase.udw  GenBfsEFA.py  GenGlobalSyncEFA.py  GenPushPullBFS.py  Makefile  RMAT.py  bfs_baseline.cpp  bfs_vertex_split.py  pull_bfs_phase.py  reference_bfs.cpp  updown_bfs.cpp  updown_bfs_push_pull.cpp
udgem5sim/ext/updown/apps/bfs_bkp/: README.md
udgem5sim/ext/updown/apps/bfs_bkp/vertex_split/: Config.py  GenAllocNlist.py  GenBuildNlist.py  GenSHTInit.py  GenSampling.py  GenSplitEdgeList.py  GenSplitVertex.py  Makefile  preprocess_bfs_edges.cpp  remap_vertex_split.py  transfer_t2b.py  updown_vertex_split.cpp
udgem5sim/ext/updown/apps/pagerank_udkvmsr/: GenDDPagerankEFA.py  GenMSRPagerankEFA.py  PagerankMsrEFA.hpp  PagerankMsrEFA.py  pagerankBaseline.cpp  pagerankDataDriven.cpp  pagerankMapShuffleReduce.cpp
udgem5sim/ext/updown/libraries/: CMakeLists.txt
udgem5sim/ext/updown/libraries/LMStaticMaps/: LMStaticMap.py
udgem5sim/ext/updown/libraries/Lifo/: Makefile  lifo.py  lifo.udw  lifo.udwh  lifo_old.udw
udgem5sim/ext/updown/libraries/ParallelGraphAbstraction/: README.md
udgem5sim/ext/updown/libraries/ParallelGraphAbstraction/deprecated/: pga.py
udgem5sim/ext/updown/libraries/ParallelGraphAbstraction/linkable/: DO_ALL_README.md  Makefile  do_all.py  pga.py  pga.udwh  pga_call_macros.py
udgem5sim/ext/updown/libraries/ScalableHashTable/: README.rst
udgem5sim/ext/updown/libraries/ScalableHashTable/deprecated/: hashtable.py  memcpy.py  memzero.py  sht.py  sht_2lvl_hash.py  sht_bucket.py  sht_bucket_confsz.py  sht_bucket_confsz_nls.bak.py  sht_bucket_confsz_nls.bak2.py  sht_bucket_var.bak.py  sht_call_macros.py  sht_confsz.py  sht_confsz_call_macros.py  sht_ext.py  sht_lane_ext.py  sht_lm_mode_0.py  sht_macros.py
udgem5sim/ext/updown/libraries/ScalableHashTable/linkable/: Makefile  memcpy.py  memcpy.udwh  sht.py  sht.udwh  sht_bucket.py  sht_bucket_confsz.py  sht_call_macros.py  sht_confsz.py  sht_confsz_call_macros.py  sht_ext.py  sht_ext.udwh  sht_ext_call_macros.py  sht_lane_ext.py  sht_macros.py
udgem5sim/ext/updown/libraries/Shmem/: CAUDShmem.py  LibCAUDShmem.py  LibCAUDShmemHPE.py  LibCAUDShmemHPEGEM5.py  LibCAUDShmemJaccard.py  LibCAUDShmemW3rdPartyMovers.py  README.md  Utils.py
udgem5sim/ext/updown/libraries/Shmem/deprecated/: LAUDShmem copy.py  LibGenShmemEFA.py  LibLAUDShmem.py  LibShmem.py  LibShmemEFA.py  TestLinker.py  UDShmem.py  UDShmemv2.1.py
udgem5sim/ext/updown/libraries/SpMalloc/: SpMalloc.py
udgem5sim/ext/updown/libraries/UDMapShuffleReduce/: KVMSRMachineConfig.py  KeyValueSetTPL.py  Macro.py
udgem5sim/ext/updown/libraries/UDMapShuffleReduce/linkable/: LinkableGlobalSync.py  LinkableKVMapShuffleCombineTPL.py  LinkableKVMapShuffleReduceTPL.py  Makefile
udgem5sim/ext/updown/libraries/UDMapShuffleReduce/utils/: OneDimArrayKeyValueSet.py  SHTKeyValueSet.py
udgem5sim/ext/updown/libraries/dramalloc/: README.md  dramalloc.hpp  dramalloc.py  dramalloc_linkable.py  dramalloc_service_core.cpp
udgem5sim/ext/updown/udbasim/tests/: CMakeLists.txt
udgem5sim/ext/updown/udbasim/tests/control_seq_tests/: dijkstra_test.cpp  fibonacci_test.cpp
udgem5sim/ext/updown/udbasim/tests/dev_inst_unit_tests/: add_test.cpp  addi_test.cpp  and_test.cpp  andi_test.cpp  bcpyll_test.cpp  bcpylli_test.cpp  bcpyol_test.cpp  beq_test.cpp  beqi_test.cpp  beqiu_test.cpp  bequ_test.cpp  bgei_test.cpp  bgeiu_test.cpp  bgt_test.cpp  bgti_test.cpp  bgtiu_test.cpp  bgtu_test.cpp  ble_test.cpp  blei_test.cpp  bleiu_test.cpp  bleu_test.cpp  blti_test.cpp  bltiu_test.cpp  bne_test.cpp  bnei_test.cpp  bneiu_test.cpp  bneu_test.cpp  ceq_test.cpp  ceqi_test.cpp  cgt_test.cpp  cgti_test.cpp  clt_test.cpp  clti_test.cpp  common_tx.cpp  cswp_test.cpp  cswpi_test.cpp  div_test.cpp  divi_test.cpp  ev_test.cpp  fadd_test.cpp  (+58 more)
udgem5sim/ext/updown/udbasim/tests/dram_seq_tests/: dram_tests.cpp
udgem5sim/ext/updown/udbasim/tests/func_seq_tests/: sht_concurrency_test.cpp  sht_concurrency_test.py  sht_concurrency_test_out.hpp  sht_concurrency_test_out.py  sht_empty_test_out.py  sht_seq_tests.cpp
udgem5sim/ext/updown/udbasim/tests/inst_unit_tests/: add_test.cpp  addi_test.cpp  and_test.cpp  andi_test.cpp  basicTX.cpp  bcpyll_test.cpp  bcpylli_test.cpp  bcpyol_test.cpp  bcpyoli_test.cpp  beq_test.cpp  beqi_test.cpp  beqiu_test.cpp  bequ_test.cpp  bgei_test.cpp  bgeiu_test.cpp  bgt_test.cpp  bgti_test.cpp  bgtiu_test.cpp  bgtu_test.cpp  ble_test.cpp  blei_test.cpp  bleiu_test.cpp  bleu_test.cpp  blti_test.cpp  bltiu_test.cpp  bne_test.cpp  bnei_test.cpp  bneiu_test.cpp  bneu_test.cpp  ceq_test.cpp  ceqi_test.cpp  cgt_test.cpp  cgti_test.cpp  clt_test.cpp  clti_test.cpp  commonTX.cpp  common_action_TX_test.cpp  cstr_test.cpp  cswp_test.cpp  cswpi_test.cpp  (+121 more)
udgem5sim/ext/updown/udbasim/tests/multi_thread_seq_tests/: atomic_lock.cpp  fork_join  fork_join.cpp  inter_lane_comm_test.cpp  multi_lane_multi_thread_init.cpp  multi_lane_multi_thread_init_basim.cpp  multilevel_fork_join.cpp  seq_test_sanity_check.cpp
udgem5sim/ext/updown/udbasim/tests/print_tests/: print_test.py  print_tests.cpp
udgem5sim/ext/updown/udbasim/tests/trans_unit_tests/: SB_automatic_refill_TX_test.cpp  basic_action1_with_lastact_TX_maxSBP_test.cpp  basic_action1_with_lastact_TX_test.cpp  basic_action1_without_lastact_TX_test.cpp  basic_action2_with_lastact_TX_maxSBP_test.cpp  basic_action2_with_lastact_TX_test.cpp  basic_action2_without_lastact_TX_test.cpp  basic_action4_with_lastact_TX_maxSBP_test.cpp  basic_action4_with_lastact_TX_test.cpp  basic_action4_without_lastact_TX_test.cpp  basic_action8_with_lastact_TX_maxSBP_test.cpp  basic_action8_with_lastact_TX_test.cpp  basic_action8_without_lastact_TX_test.cpp  basic_action_TX_maxSBP_test.cpp  basic_action_TX_test.cpp  basic_noaction1_with_lastact_TX_maxSBP_test.cpp  basic_noaction1_with_lastact_TX_test.cpp  basic_noaction2_with_lastact_TX_maxSBP_test.cpp  basic_noaction2_with_lastact_TX_test.cpp  basic_noaction4_with_lastact_TX_maxSBP_test.cpp  (+21 more)
(+9650 files in other folders)
